# os-sim

./: CMakeLists.txt  README.md
experiments/: exp_a_algorithm_comparison.cpp  exp_b_frame_sensitivity.cpp  exp_c_cow_read_heavy.cpp  exp_d_cow_write_heavy.cpp  exp_e_write_timing.cpp  exp_f_tlb_locality.cpp  exp_g_tlb_size_sweep.cpp  exp_h_tlb_shootdown_cost.cpp  exp_i_page_table_comparison.cpp  exp_j_hashed_collisions.cpp  exp_k_inverted_lookup.cpp  exp_l_working_set.cpp  exp_m_slab_allocator.cpp  exp_n_buddy_fragmentation.cpp  exp_utils.h
src/: constants.h  frame_pool.cpp  frame_pool.h  memory_manager.cpp  memory_manager.h  metrics.cpp  metrics.h  page_table.cpp  page_table.h  page_table_hashed.cpp  page_table_hashed.h  page_table_iface.h  page_table_inverted.cpp  page_table_inverted.h  page_table_two_level.cpp  page_table_two_level.h  process.h  tlb.cpp  tlb.h
src/alloc/: buddy_allocator.cpp  buddy_allocator.h  slab_allocator.cpp  slab_allocator.h
src/policy/: clock.cpp  clock.h  fifo.cpp  fifo.h  lru.cpp  lru.h  opt.cpp  opt.h  replacement_policy.h  working_set.cpp  working_set.h
tests/: test_buddy_allocator.cpp  test_clock.cpp  test_cow.cpp  test_fifo.cpp  test_frame_pool.cpp  test_hashed_page_table.cpp  test_inverted_page_table.cpp  test_lru.cpp  test_memory_manager.cpp  test_opt.cpp  test_page_table.cpp  test_slab_allocator.cpp  test_tlb.cpp  test_two_level_page_table.cpp  test_working_set.cpp
tui/: comparison.cpp  comparison.h  main.cpp  simulator_state.cpp  simulator_state.h
